--- a/src/gui/About.fxml
+++ b/src/gui/About.fxml
@@ -5,10 +5,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1">
+<VBox prefHeight="202.0" prefWidth="381.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label alignment="TOP_LEFT" contentDisplay="TOP" prefHeight="212.0" prefWidth="381.0" text="About">
+      <Label alignment="TOP_LEFT" contentDisplay="TOP" prefHeight="44.0" prefWidth="381.0" text="About">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -16,7 +15,7 @@
             <Insets bottom="10.0" left="20.0" top="10.0" />
          </padding>
       </Label>
-      <Label alignment="TOP_LEFT" contentDisplay="TOP" prefHeight="17.0" prefWidth="157.0" text="JavaFX Application Demo">
+      <Label alignment="TOP_LEFT" contentDisplay="TOP" prefHeight="0.0" prefWidth="157.0" text="JavaFX Application Demo">
          <padding>
             <Insets left="20.0" />
          </padding>
